<resources>
    <string name="app_name">피풀</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="lock_slide_set">잠금 슬라이드 설정</string>
    <string name="skin_setting">스킨 설정</string>
    <string name="other">기타</string>
    <string name="ox_quize">OX 퀴즈</string>
    <string name="wrong_answer">오답 노트</string>
    <string name="setting">설정</string>
    <string name="dp">Dark Purple</string>
    <string name="db">Dark Blue</string>
    <string name="dgr">Dark Grey</string>
    <string name="dg">Dark Green</string>
    <string name="ly">Light Yellow</string>
    <string name="lp">Light Pink</string>
    <string name="lg">Light Grey</string>
    <string name="ls">Light SY</string>
    <string name="slide_onoff_setting">슬라이드 켜기 / 끄기</string>
    <string name="force_lock_setting">강제 잠금 설정</string>
    <string name="force_lock_setting_desc">
        오답일 경우 바로 다른 답을 선택하여\n
        틀린 문제를 그냥 넘기게 되는 것을 방지하고\n
        다시 생각하여 풀 수 있도록\n
        강제 잠금 시간을\n
        설정합니다.
    </string>
    <string name="on">켜기</string>
    <string name="off">끄기</string>
    <string name="forceLockDialogTitle">시간 선택</string>
    <string name="login">로그인</string>
    <string name="signup">계정 만들기</string>
    <string name="password_hint">비밀번호</string>
    <string name="id_hint">아이디</string>
    <string name="create_account">계정 만들기</string>
    <string name="name">이름</string>
    <string name="check_password">비밀번호 확인</string>
    <string name="mail">메일</string>
    <string name="phone">휴대폰</string>
    <string name="go_back">뒤로가기</string>
    <string name="logout">로그아웃</string>
    <string name="font_setting">폰트 설정</string>
</resources>
